sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:90: error: not found: value cherchePasjoueur
  deplace(mod(currBase+1, nbBases), cherchePasjoueur(arrive, arrive));
                                    ^